# Vecord

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  message.rs  metadata.rs
src/discord/: handler.rs  mod.rs
src/nostr/: mod.rs
vecord/: .env.example  Cargo.toml  README.md
vecord/src/discord/: handler.rs
vecord/src/nostr/: mod.rs
